<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>god-analysis-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>God Analysis API</name>
	<description>Spring Boot REST API for cross-pantheon mythology data analysis</description>

	<properties>
		<java.version>26</java.version>
		<resilience4j.version>2.4.0</resilience4j.version>
		<wiremock.version>3.5.4</wiremock.version>
		<jetty.version>12.1.7</jetty.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Force consistent Jetty 12.1.7 across all modules (wiremock-jetty12 mixes ee10 12.0.8 with core 12.1.7) -->
			<dependency>
				<groupId>org.eclipse.jetty.ee10</groupId>
				<artifactId>jetty-ee10-servlet</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty.ee10</groupId>
				<artifactId>jetty-ee10-servlets</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty.ee10</groupId>
				<artifactId>jetty-ee10-webapp</artifactId>
				<version>${jetty.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Spring Boot Web (servlet-based, no reactive) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- Spring Boot Actuator for monitoring -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<!-- Resilience4j Retry for ADR-002 retry policy -->
		<dependency>
			<groupId>io.github.resilience4j</groupId>
			<artifactId>resilience4j-retry</artifactId>
			<version>${resilience4j.version}</version>
		</dependency>

		<!-- Resilience4j Spring Boot integration (Spring Boot 4 module) -->
		<dependency>
			<groupId>io.github.resilience4j</groupId>
			<artifactId>resilience4j-spring-boot4</artifactId>
			<version>${resilience4j.version}</version>
		</dependency>

		<!-- Development tools -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- Testing dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Spring Boot 4: MockMvc test support lives in webmvc-test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- WireMock with Jetty 12 HTTP server factory for in-process testing -->
		<dependency>
			<groupId>org.wiremock</groupId>
			<artifactId>wiremock-jetty12</artifactId>
			<version>${wiremock.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
